<resources>
    <string name="app_name">居士音乐</string>
    <!--百度统计app key-->
    <string name="baidu_tong_ji_appKey">34b5c79e71</string>
    <!--友盟app key-->
    <string name="Umen_app_key">5b4ee0db8f4a9d2bf1000091</string>
    <string name="Umeng_Channel">jushiMusicUmeng</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="music">音乐</string>
    <string name="friends">好友</string>
    <string name="homepage">首页</string>
    <string name="video_live">视频/直播</string>
    <string name="search">搜索</string>
    <string name="chart">榜单</string>
    <string name="today_recommend">今日推荐</string>
    <string name="hot_artist">热门歌手</string>
    <string name="all_artist">全部歌手</string>
    <string name="hot_">热门</string>
    <string name="China_artist">华语</string>
    <string name="ou_mei_artist">欧美</string>
    <string name="han_guo_artist">韩国</string>
    <string name="japan_artist">日本</string>
    <string name="other_artist">其他</string>

    <string name="latest_MV">最新MV</string>
    <string name="zhiBo_live">直播</string>
    <string name="radio">电台</string>
    <string name="search_hint">请输入歌曲、歌手</string>
    <string name="nothing_more">我是有底线的</string>
    <string name="play_all">播放全部</string>
    <string name="total_">(共</string>
    <string name="shou_">首)</string>
    <string name="new_music_hot_words">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="load_success">加载成功</string>
    <string name="load_failed">加载失败</string>
    <string name="click_login">点击登录</string>
    <string name="local_music">本地音乐</string>
    <string name="near_play">最近播放</string>
    <string name="my_favorites">我的收藏</string>
    <string name="download_manager">下载管理</string>
    <string name="send">发送</string>
    <string name="search_local_music">搜索本地歌曲</string>
    <string name="menu_favorites_text">收藏</string>
    <string name="menu_download_text">下载</string>
    <string name="menu_share_text">分享</string>
    <string name="play_times">播放次数</string>
    <string name="js_cancel">取消</string>
    <string name="OK">确定</string>
    <string name="delete">删除</string>
    <string name="current_play_list">当前播放列表：</string>

    <!--friends-->
    <string name="news">消息</string>
    <string name="my_friends">好友</string>
    <string name="my_page">我的</string>
    <string name="landing_account_number">登陆账号</string>
    <string name="landing_psw">密码</string>
    <string name="landing">登陆</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="new_user_register">新用户注册</string>
    <string name="input_register_user_name">输入注册用户名</string>
    <string name="confirm_psw">确认密码</string>
    <string name="register">注册</string>
    <string name="not_input_register_name">未填写用户名！</string>
    <string name="please_input_psw">请输入密码！</string>
    <string name="please_input_psw_again">请再次输入密码！</string>
    <string name="input_psw_not_equals">两次输入的密码不一致！</string>
    <string name="user_name_exists">用户名已存在！</string>
    <string name="input_psw_must_">密码必须大于等于6位数！</string>
    <string name="psw_must_not_empty">密码不能为空！</string>
    <string name="user_name_must_not_empty">登陆账号不能为空!</string>
    <string name="psw_input_error">密码输入错误！</string>
    <string name="User_do_not_exist">用户名不存在！</string>
    <string name="Username_or_password_is_wrong">用户名或密码错误！</string>
    <string name="User_is_already_login">已经登陆！</string>
    <string name="account_already_delete">账号已经被删除</string>
    <string name="account_login_on_other_device">账号在其他设备上登陆</string>
    <string name="input_friends_name">输入好友名称</string>
    <string name="input_add_friends_reason">填写添加好友的原因</string>
    <string name="add_friends">添加好友</string>
    <string name="not_input_friends_name">请先填写好友名称</string>
    <string name="add_msg_send_success">添加消息发送成功</string>
    <string name="can_not_add_self">不能添加自己为好友</string>
    <string name="can_not_repeat_add_friends">已经是好友关系，不能重复添加</string>
    <string name="send_btn">发送</string>
    <string name="admin_">admin</string>
    <string name="admin">管理员：</string>
    <string name="request_add_friends">请求添加你为好友！</string>
    <string name="request_accepted">同意</string>
    <string name="request_unaccepted">拒绝</string>
    <string name="exit_login_success">退出登录成功</string>
    <string name="login_success">登陆成功</string>


    <!--添加好友成功后的广播-->
    <string name="ADD_FRIENDS_SUCCESS_BROADCAST_ACTION">action.add.friends.success</string>
    <!--登陆成功后的广播-->
    <string name="LOGIN_SUCCESS_BROADCAST_ACTION">action.login.success</string>
    <!--退出登录成功的广播-->
    <string name="EXIT_LOGIN_SUCCESS_BROADCAST_ACTION">action.exit.success</string>

    <!--限制只能输入数字和字母-->
    <string name="editText_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="no_anything_message">暂时没有任何消息,点击</string>
    <string name="and_with_friends_chat">或与好友</string>
    <string name="refresh">刷新</string>
    <string name="to_chat">互动</string>
    <string name="please_to_login">请先登陆</string>
    <string name="settings">设置</string>
    <string name="exit_login">退出登录</string>
    <string name="more_text">更多</string>
    <string name="radio_2">电台：</string>
    <string name="dao_di_xian_le">呀~到底线了</string>
    <string name="bei_su_play">倍速播放：</string>

    <string-array name="bei_su_play">
        <item>选择</item>
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
    </string-array>

</resources>
