<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/landing_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toLeftOf="@+id/tv_app_name"
            android:src="@mipmap/music_logo" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/app_name" />

        <EditText
            android:id="@+id/et_landing_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_logo"
            android:layout_marginTop="15dp"
            android:hint="@string/landing_account_number"
            android:textColor="@color/c_ffffff"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:id="@+id/et_landing_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_landing_number"
            android:layout_marginTop="15dp"
            android:hint="@string/landing_psw"
            android:textColor="@color/c_ffffff"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:id="@+id/landing_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_landing_psw"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_landing_btn_drawable"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/landing"
            android:textColor="@color/c_ffffff"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:id="@+id/forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/landing_btn"
            android:layout_marginTop="15dp"
            android:text="@string/forget_psw"
            android:textColor="@color/c_2aafe3"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/landing_btn"
            android:layout_marginTop="15dp"
            android:text="@string/new_user_register"
            android:textColor="@color/c_2aafe3"
            android:textSize="@dimen/_14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </RelativeLayout>

</FrameLayout>