<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_mv_item_layout"
        android:elevation="3dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/add_friends"
            android:textColor="@color/c_2aafe3"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:id="@+id/add_friends_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:textColor="@color/e80b0b"
            android:textSize="@dimen/_16sp" />

        <EditText
            android:id="@+id/et_add_friends_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_friends_hint"
            android:digits="@string/editText_digits"
            android:padding="5dp"
            android:background="@drawable/bg_add_friends_reason_drawable"
            android:hint="@string/input_friends_name"
            android:textSize="@dimen/_16sp" />

        <EditText
            android:id="@+id/et_add_friends_reason"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/et_add_friends_name"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_add_friends_reason_drawable"
            android:gravity="start"
            android:hint="@string/input_add_friends_reason" />

        <TextView
            android:id="@+id/add_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_add_friends_reason"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_cancel_btn_drawable"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:text="@string/js_cancel"
            android:textColor="@color/c_000000"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/add_OK_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/et_add_friends_reason"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_login_btn_drawable"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:text="@string/OK"
            android:textColor="@color/c_ffffff"
            android:textSize="@dimen/_16sp" />

    </RelativeLayout>

</LinearLayout>