<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_all_artist"
    android:id="@+id/all_artist_item_layout">

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.jushi.muisc.chat.view.JSTextView
            android:id="@+id/hot_singer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hot_"
            android:textColor="@color/e80b0b"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/_999999" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.jushi.muisc.chat.view.JSTextView
            android:id="@+id/china_singer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/China_artist"
            android:textColor="@color/_333333"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/_999999" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.jushi.muisc.chat.view.JSTextView
            android:id="@+id/ouMei_singer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ou_mei_artist"
            android:textColor="@color/_333333"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/_999999" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.jushi.muisc.chat.view.JSTextView
            android:id="@+id/hanGuo_singer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/han_guo_artist"
            android:textColor="@color/_333333"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/_999999" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.jushi.muisc.chat.view.JSTextView
            android:id="@+id/riBen_singer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/japan_artist"
            android:textColor="@color/_333333"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/_999999" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.jushi.muisc.chat.view.JSTextView
            android:id="@+id/other_singer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/other_artist"
            android:textColor="@color/_333333"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>