<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".music.search.ui.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_activity_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:navigationIcon="@drawable/back_icon_red">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/search_activity_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:button="@drawable/search" />

            <EditText
                android:id="@+id/search_activity_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/search_activity_search_button"
                android:background="@drawable/search_edit_text_bg_icon"
                android:gravity="center"
                android:hint="@string/search_hint"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_15sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <!--显示搜索结果-->
    <com.jingchen.pulltorefresh.PullToRefreshLayout
        android:id="@+id/search_activity_refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_activity_toolBar"
        android:layout_above="@+id/PlayMusicView"
        android:visibility="gone">

        <com.jingchen.pulltorefresh.PullableRecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

    </com.jingchen.pulltorefresh.PullToRefreshLayout>

    <!--显示新歌热词、历史搜索-->
    <LinearLayout
        android:id="@+id/new_music_hot_words_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_activity_toolBar"
        android:layout_above="@+id/PlayMusicView"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <com.jushi.muisc.chat.view.JSTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/new_music_hot_words"
            android:textColor="@color/_333333"
            android:textSize="@dimen/_18sp" />
        <!--显示新歌热词的流式布局-->
        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/TagFlowLayout_new_music_hot_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            zhy:max_select="-1" />

        <com.jushi.muisc.chat.view.JSTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/history_search"
            android:textColor="@color/_333333"
            android:textSize="@dimen/_18sp" />
        <!--显示历史搜索关键词的recyclerView-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/history_search_words_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <include layout="@layout/buttom_play_controller_layout"/>

</RelativeLayout>
